--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,11 @@ body {
     background-color: #272f41;
 }
 
+.sidebar-btn-active {
+    background-color: #363c4b;
+    color: rgb(248, 255, 188);
+}
+
 .main-display {
     border: none;
     display: flex;
