--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ body {
 }
 
 .sidebar {
+    display: flex;
+    flex-direction: column;
     width: 15vw;
 }
 
@@ -54,4 +56,13 @@ body {
     flex: 1;
     height: 100%;
     width: 100%;
+}
+
+.separator {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    flex: 1;
 }
